# IT3105_project2

./: README.md  config_manager.py  evaluate_model.py  evaluation_results.json  main.py  pyproject.toml  quick_eval.py  train_dqn.py  train_with_config.py
benchmark_results/: dqn_breakout_20260106_110143_details.csv  dqn_breakout_20260106_110143_summary.csv  dqn_breakout_20260106_110712_details.csv  dqn_breakout_20260106_110712_summary.csv  dqn_breakout_20260106_113725_details.csv  dqn_breakout_20260106_113725_summary.csv  muzero_breakout_20260106_121059_details.csv  muzero_breakout_20260106_121059_summary.csv
checkpoints/: metrics_breakout_20251226_174527.json  metrics_breakout_20251226_175213.json
configs/: default.yaml  demo.yaml  high_performance.yaml  muzero_default.yaml  muzero_test.yaml  standard_dqn.yaml
examples/: checkpoint_example.py  dqn_example.py
muzero_results/run_001/: run_config.yaml
muzero_results/run_002/: run_config.yaml
muzero_results/run_002/checkpoint_001/: metadata.json  metrics_history.json  model_params.pkl
src/: __init__.py
src/evaluation/: benchmark_evaluation.py  visual_evaluation.py
src/muzero/: buffer.py  mcts.py  minatar_env.py  network.py  run.py  trainer.py  utils.py
src/nn/: README.md  __init__.py  network.py
src/training/: __init__.py  replay_buffer.py
src/utils/: __init__.py  config.py
